--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,14 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>6.8.1</version>
+            <version>6.10.2</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>6.8.1</version>
+            <version>6.10.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -39,6 +39,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>6.8.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
